Network status, db code but not working completely

--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    tools:context="com.codepath.apps.CPTweetsM.TimelineActivity">
+    tools:context="com.codepath.apps.CPTweetsM.activities.TimelineActivity">
 
 <!--    app:layout_behavior="@string/appbar_scrolling_view_behavior" -->
 
