--- a/app/src/main/res/layout/fragment_compose_tweet.xml
+++ b/app/src/main/res/layout/fragment_compose_tweet.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btn_tweet"
-        android:backgroundTint="@android:color/holo_blue_dark"
+        android:backgroundTint="#1DA1F3"
         android:textColor="#FFFFFF"
         android:id="@+id/btnTweet"
         android:layout_alignParentRight="true"
