--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
             backward-compatibility can go here.
         -->
         <item name="colorAccent">@android:color/holo_blue_light</item>
+        <item name="colorPrimary">#1DA1F3</item>
     </style>
 
     <!-- Application theme. -->
