--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -60,7 +60,7 @@
 
     <ImageView
         android:layout_width="350dp"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:layout_marginTop="5dp"
         android:scaleType="fitXY"
         android:id="@+id/ivImage"
