Retweet count added

--- a/app/src/main/res/layout/activity_tweet_detail.xml
+++ b/app/src/main/res/layout/activity_tweet_detail.xml
@@ -65,6 +65,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Small Text"
+        android:layout_marginTop="5dp"
         android:id="@+id/tvCreatedTime"
         android:layout_below="@+id/ivImage"
          />
@@ -72,11 +73,48 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Likes"
+        android:id="@+id/tvLikes"
+
+        android:layout_below="@+id/tvCreatedTime"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/tvFavoriteCount"
+        android:text="1234"
+        android:layout_toEndOf="@+id/tvLikes"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="50dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:background="@android:color/transparent"
         android:layout_below="@+id/tvCreatedTime"
+        android:layout_toRightOf="@+id/tvLikes" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Retweets"
+        android:id="@+id/tvRetweet"
+        android:layout_toEndOf="@+id/tvFavoriteCount"
+        android:layout_toRightOf="@+id/tvFavoriteCount"
+        android:layout_below="@+id/tvCreatedTime"
          />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvRetweetCount"
+        android:text="5678"
+        android:layout_toEndOf="@+id/tvRetweet"
+        android:layout_marginLeft="5dp"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:background="@android:color/transparent"
+        android:layout_below="@+id/tvCreatedTime"
+        android:layout_toRightOf="@+id/tvRetweet" />
 
 </RelativeLayout>
