--- a/app/src/main/res/layout/fragment_compose_tweet.xml
+++ b/app/src/main/res/layout/fragment_compose_tweet.xml
@@ -1,58 +1,60 @@
-<!-- fragment_edit_filter.xml -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/edit_filter"
-    android:layout_width="wrap_content" android:layout_height="wrap_content"
-    android:layout_gravity="center" android:orientation="vertical"  >
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    <RelativeLayout
+        android:id="@+id/edit_filter"
+        android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:layout_gravity="center" android:orientation="vertical"  >
 
-    <ImageButton
-        android:id="@+id/btnClose"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_centerHorizontal="true"
-        android:background="@null"
-        android:src="@drawable/ic_close_black_24dp" />
+        <ImageButton
+            android:id="@+id/btnClose"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_centerHorizontal="true"
+            android:background="@null"
+            android:src="@drawable/ic_close_black_24dp" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:id="@+id/etTweet"
-        android:background="@android:color/transparent"
-        android:maxLength="280"
-        android:layout_marginLeft="10dp"
-        android:hint="@string/compose_hint"
-        android:cursorVisible="false"
-        android:inputType="textNoSuggestions"
-        android:layout_below="@+id/btnClose"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:id="@+id/etTweet"
+            android:background="@android:color/transparent"
+            android:maxLength="280"
+            android:layout_marginLeft="10dp"
+            android:hint="@string/compose_hint"
+            android:cursorVisible="false"
+            android:inputType="textNoSuggestions"
+            android:layout_below="@+id/btnClose"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/btn_tweet"
-        android:backgroundTint="#1DA1F3"
-        android:textColor="#FFFFFF"
-        android:id="@+id/btnTweet"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:onClick="onSave"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_tweet"
+            android:backgroundTint="#1DA1F3"
+            android:textColor="#FFFFFF"
+            android:id="@+id/btnTweet"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="20dp"
+            android:layout_centerHorizontal="true"
+            android:onClick="onSave"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvChar"
-        android:text="140"
-        android:background="@android:color/transparent"
-        android:layout_alignBaseline="@+id/btnTweet"
-        android:layout_alignBottom="@+id/btnTweet"
-        android:layout_toLeftOf="@+id/btnTweet"
-        android:layout_marginRight="5dp"
-        android:layout_toStartOf="@+id/btnTweet" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvChar"
+            android:text="140"
+            android:background="@android:color/transparent"
+            android:layout_alignBaseline="@+id/btnTweet"
+            android:layout_alignBottom="@+id/btnTweet"
+            android:layout_toLeftOf="@+id/btnTweet"
+            android:layout_marginRight="5dp"
+            android:layout_toStartOf="@+id/btnTweet" />
 
-</RelativeLayout>
+    </RelativeLayout>
+</layout>
