--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -9,7 +9,7 @@
         layout="@layout/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/include" />
+         />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,12 +17,13 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/rlUserHeader"
-        android:layout_below="@+id/include">
+        android:layout_below="@+id/toolbar">
 
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:id="@+id/ivProfileImage"
+            android:scaleType="fitXY"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="false"
             android:layout_alignParentEnd="false"
